# project2

./: .env.example  .gitignore  Claude.md  README.md  catalog.json  docker-compose.yml  tasks.md
.claude/skills/cerebras/: skill.md
.claude/skills/legal-template-drafting/: skill.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  deps.py  documents.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: chat.py
backend/tests/: conftest.py
backend/tests/integration/: test_app_boots.py  test_auth.py  test_chat.py  test_documents.py  test_frontend_mount.py
backend/tests/unit/: test_chat_service.py  test_db_engine.py  test_security.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthCard.tsx  BrandHeader.tsx  ChatInterface.tsx  DisclaimerBanner.tsx  DisclaimerFooter.tsx  DocumentHistory.tsx
frontend/lib/: markdown.ts
scripts/: dev.sh  start.sh  stop.sh  test.sh
